# librarypaste

./: README.rst  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: main.yml
docs/: index.rst
librarypaste/: __main__.py  datastore.py  jsonstore.py  pastebin.py
librarypaste/tests/: __init__.py
newsfragments/: +17e3cf9b.feature.rst
tests/: __init__.py
