[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "librarypaste"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "A simple pastebin implemented in Python"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
	"pygments",
	"genshi",
	"cherrypy",
	"PyYAML",
	"requests",
	"jaraco.functools>=1.15",
	"more_itertools",
	"importlib_metadata",
	"importlib_resources",
	"puremagic",
	"jaraco.context",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/jaraco/librarypaste"

[project.optional-dependencies]
test = [
	# upstream
	"pytest >= 6, != 8.1.*",

	# local
	"pymongo>=3",
	"jaraco.mongodb>=11.5.1",
]

doc = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

check = [
	"pytest-checkdocs >= 2.4",
	"pytest-ruff >= 0.2.1; sys_platform != 'cygwin'",
]

cover = [
	"pytest-cov",
]

enabler = [
	"pytest-enabler >= 2.2",
]

type = [
	# upstream
	"pytest-mypy",

	# local
	"types-pyyaml",
	"types-Pygments",
]

[project.entry-points]
pmxbot_handlers = {librarypaste = "librarypaste.pmxbot"}

[project.scripts]
librarypaste = "librarypaste.launch:main"

[tool.setuptools.packages.find]
exclude = [
	# duplicate exclusions for pypa/setuptools#2688
	"docs",
	"docs.*",
	"tests",
	"tests.*",
	"uptests",
	"uptests.*",
]
namespaces = true


[tool.setuptools_scm]


[tool.pytest-enabler.mypy]
# Disabled due to jaraco/skeleton#143
