[metadata]
name = librarypaste
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = A simple pastebin implemented in Python
long_description = file:README.rst
url = https://github.com/jaraco/librarypaste
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.8
install_requires =
	pygments
	genshi
	cherrypy
	PyYAML
	requests
	jaraco.functools>=1.15
	more_itertools
	importlib_metadata
	importlib_resources

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff

	# local
	pymongo>=3
	jaraco.mongodb

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
console_scripts =
	librarypaste = librarypaste.launch:main
pmxbot_handlers =
	librarypaste = librarypaste.pmxbot
