[metadata]
name = librarypaste
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = A simple pastebin implemented in Python
long_description = file:README.rst
url = https://github.com/jaraco/librarypaste
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.8
install_requires =
	pygments
	genshi
	cherrypy
	PyYAML
	requests
	jaraco.functools>=1.15
	more_itertools
	importlib_metadata
	importlib_resources

[options.packages.find]
exclude =
	# duplicate exclusions for pypa/setuptools#2688
	docs
	docs.*
	tests
	tests.*
	uptests
	uptests.*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local
	pymongo>=3
	jaraco.mongodb>=11.5.1
	types-pyyaml

docs =
	# upstream
	sphinx >= 3.5
	# workaround for sphinx/sphinx-doc#11662
	sphinx < 7.2.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
console_scripts =
	librarypaste = librarypaste.launch:main
pmxbot_handlers =
	librarypaste = librarypaste.pmxbot
